# agentic-system-patternss

./: 5 workflow design patterns.drawio  AWS Global Infrastructure.drawio  EC2.drawio  README.md  env-example  main.py  pattern1.py  pattern3.py  pyproject.toml
1_agentic-ai-patterns/: pattern1.py  pattern2.py
2_openai-agent-sdk/: agent-asyncio-gather.py  agent-guardrail.py  agent-handoff.py  agent-hello_world-streamed.py  agent-hello_world.py  agent-hostedtool.py  agent-structuredoutput.py  agent-tool.py
2_openai-agent-sdk/docs/: wiki.md
business_usecase/: company-analysis.py
docs/: pattern3.drawio
